--- a/releases/ghost.yaml
+++ b/releases/ghost.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   releaseName: ghost
   chart:
-    git: ssh://git@github.com/weaveworks/flux-get-started
+    git: ssh://wkim-ent@github.com/weaveworks/flux-get-started
     ref: master
     path: charts/ghost
   values:
